# BashAnalogue

./: CMakeLists.txt  Command.h  README.md  commandManager.c  commandManager.h  commandsPool.c  commandsPool.h  main.c  shellState.c  shellState.h
commands/: CdCommand.c  CdCommand.h  CpCommand.c  CpCommand.h  GrepCommand.c  GrepCommand.h  LsCommand.c  LsCommand.h  PingCommand.c  PingCommand.h  PwdCommand.c  PwdCommand.h
